kanc_pamoi/src/tests/sample_code/should_fail/single_file/type_check/match_case_param_labeledness_mismatch/unlabeled_variant_labeled_case.k
type Nat {
    o: Nat,
    s(n: Nat): Nat,
}

let plus = fun plus(-a: Nat, b: Nat): Nat {
    match a {
        o => b,
        s(:pred) => Nat.s(plus(pred, b)),
    }
};
